unpackaged/objects/Loan_Account__c.object
<CustomObject>
    <description>will be used to store loan and EMI related information</description>
    <fields>
        <fullName>Agent_Code__c</fullName>
        <label>Agent Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Name__c</fullName>
        <label>Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Contact_Number_1__c</fullName>
        <label>Applicant Contact Number 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_Contact_Number_2__c</fullName>
        <label>Applicant Contact Number 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Applicant_E_Mail_ID__c</fullName>
        <label>Applicant E-Mail ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan Accounts (Lead)</relationshipLabel>
        <relationshipName>Loan_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DPD__c</fullName>
        <label>DPD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DSA_Connector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSA/Connector</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Accounts</relationshipLabel>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Disbursal_Amount__c</fullName>
        <label>Disbursal Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Disbursal_Date__c</fullName>
        <label>Disbursal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EMI_Overdue_Amount__c</fullName>
        <label>EMI Overdue Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FI_Inititation_Date__c</fullName>
        <label>FI Inititation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FI_Report_Received_Date__c</fullName>
        <label>FI Report Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FI_Report_Status__c</fullName>
        <label>FI Report Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Date__c</fullName>
        <label>Final Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Decision_Status__c</fullName>
        <label>Final Decision Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_EMI_Date__c</fullName>
        <label>First EMI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IMD_Deposit_Date__c</fullName>
        <label>IMD Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IMD_Status_Date__c</fullName>
        <label>IMD Status Date</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Principle_Go_No_Go_Date__c</fullName>
        <label>In Principle Go-No-Go Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_case_of_Reject_Reject_Reason__c</fullName>
        <label>In case of Reject, Reject Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installment_Amount__c</fullName>
        <label>Installment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Amount__c</fullName>
        <label>Insurance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LOAN_STATUS__c</fullName>
        <label>LOAN STATUS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_EMI_Date__c</fullName>
        <label>Last EMI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Amount__c</fullName>
        <label>Last Payment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date__c</fullName>
        <label>Last Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legai_1_Report_Status__c</fullName>
        <label>Legai-1 Report Status</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_1_Completion_Date__c</fullName>
        <label>Legal-1 Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_1_Inititation_Date__c</fullName>
        <label>Legal-1 Inititation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_2_Completion_Date__c</fullName>
        <label>Legal-2 Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_2_Inititation_Date__c</fullName>
        <label>Legal-2 Inititation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_2_Report_Status__c</fullName>
        <label>Legal-2 Report Status</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Account_Number__c</fullName>
        <label>Loan Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Date__c</fullName>
        <label>Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_of_Open_Queries__c</fullName>
        <label>No. of Open Queries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Address__c</fullName>
        <label>Office Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Overdue_Amount__c</fullName>
        <label>Other Overdue Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PD_Date__c</fullName>
        <label>PD  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PD_Done_By_Employee_Designation__c</fullName>
        <label>PD Done By- Employee Designation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_Done_By_Employee_Name__c</fullName>
        <label>PD Done By- Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PF_Amount__c</fullName>
        <label>PF Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PROPERTY_ADDRESS_IN_CASE_OF_LAP__c</fullName>
        <label>PROPERTY ADDRESS (IN CASE OF LAP)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_PD_Completion_Date__c</fullName>
        <label>Post PD Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Post_PD_Queries_Raised_Date__c</fullName>
        <label>Post PD Queries Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Principal_Outstanding__c</fullName>
        <label>Principal Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_ID__c</fullName>
        <label>Prospect ID</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCU_Inititation_Date__c</fullName>
        <label>RCU Inititation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCU_Report_Received_Date__c</fullName>
        <label>RCU Report Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RCU_Report_Status__c</fullName>
        <label>RCU Report Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROI__c</fullName>
        <label>ROI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reject_Remarks__c</fullName>
        <label>Reject Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence_Address__c</fullName>
        <label>Residence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Residual_Tenure__c</fullName>
        <label>Residual Tenure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sanction_Date__c</fullName>
        <label>Sanction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sanctioned_Amount__c</fullName>
        <label>Sanctioned Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheme__c</fullName>
        <label>Scheme</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Channel_Agent_Code__c</fullName>
        <label>Second Channel Agent Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seocnd_Channel_Agent_Name__c</fullName>
        <label>Seocnd Channel Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status for loan if any is Pending or loan is fully paid</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                    <default>true</default>
                    <label>Applied</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Disbursed</fullName>
                </value>
                <value>
                    <fullName>EMI Scheduled</fullName>
                </value>
                <value>
                    <fullName>Pending Closure</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TENURE__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total number of Months/EMI for Loan</description>
        <label>TENURE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Technical_1_Completion_Date__c</fullName>
        <label>Technical-1 Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_1_Inititation_Date__c</fullName>
        <label>Technical-1 Inititation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_1_Report_Status__c</fullName>
        <label>Technical-1 Report Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_2_Completion_Date__c</fullName>
        <label>Technical-2 Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_2_Inititation_Date__c</fullName>
        <label>Technical-2 Inititation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_2_Report_Status__c</fullName>
        <label>Technical-2 Report Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_3_Completion_Date__c</fullName>
        <label>Technical-3 Completion Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_3_Inititation_Date__c</fullName>
        <label>Technical-3 Inititation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_3_Report_Status__c</fullName>
        <label>Technical-3 Report Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Loan_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1st_Decision_Date_CPA_Stage__c</fullName>
        <label>1st Decision Date (CPA Stage)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Decision_Status__c</fullName>
        <label>1st Decision Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Recommendation_Date_Credit_Manager__c</fullName>
        <label>1st Recommendation Date (Credit Manager)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Recommendation_Status__c</fullName>
        <label>1st Recommendation Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>create_year__c</fullName>
        <formula>YEAR(DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>create year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>created_month__c</fullName>
        <formula>MONTH(DATEVALUE(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>created month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Loan Account</label>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>DSA_Connector__c</columns>
        <columns>LOAN_STATUS__c</columns>
        <columns>Disbursal_Amount__c</columns>
        <columns>ROI__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Loan-{0000}</displayFormat>
        <label>Loan #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>sharing_record_with_above_role__c</fullName>
        <label>sharing  record with above role</label>
    </sharingReasons>
    <validationRules>
        <fullName>DSA_Connector_For_Unsecured_Loans</fullName>
        <active>true</active>
        <description>DSA/Connector is mandatory for Unsecured loans</description>
        <errorConditionFormula>(ISPICKVAL(Applicant__r.Product__c,&apos;Lead - UDYAM (UNSECURED LOAN)&apos;) ||
ISPICKVAL(Applicant__r.Product__c,&apos;Lead - Rural Udyam&apos;)) &amp;&amp;
ISBLANK(DSA_Connector__c)</errorConditionFormula>
        <errorMessage>Please provide DSA/Connector</errorMessage>
    </validationRules>
</CustomObject>